tests/cases/patterns/ok/pattern-ref-ownership-vector-aggregate.ari
struct Holder {
  token: own i64,
  mut count: i64,
}

fn make_owned(value: i64) -> own i64 {
  return value;
}

fn write(value: ref mut i64, amount: i64) -> void {
  let raw: ptr i64 = value as ptr i64;
  *raw = *raw + amount;
}

fn main() -> i64 {
  var holders: Vec[Holder] = [
    Holder { token: make_owned(1), count: 2 },
    Holder { token: make_owned(2), count: 4 }
  ];
  {
    let ref mut [
      Holder { token: _, count: first },
      Holder { token: _, count: second }
    ] = holders;
    write(first, 5);
    write(second, 7);
  }
  let total = holders[0].count + holders[1].count;
  drop holders;
  return total;
}
