tests/cases/patterns/errors/pattern-ref-ownership-vector-aggregate-moved-field.ari
struct Holder {
  token: own i64,
  count: i64,
}

fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  var holders: Vec[Holder] = [
    Holder { token: make_owned(1), count: 2 },
    Holder { token: make_owned(2), count: 4 }
  ];
  let moved = holders[0].token;
  let ref [
    Holder { token, count: _ },
    _
  ] = holders;
  drop moved;
  drop holders;
  return 0;
}
